# android_rs_base

./: .gitignore  Cargo.toml  readme.md
src/: app_config.rs  app_container.rs  app_implementor.rs  lib.rs
